# computer-graphics-pj

./: .gitignore  CMakeLists.txt  CSCIx229.h  README  errcheck.c  loadtexbmp.c  main.c  makefile  object.c  postproc.f.glsl  postproc.frag  postproc.vert  project.c  texture.frag
models/tank/: tank.mtl
